syntax.output
Terminals which are not used

   token_if
   token_else
   token_while
   token_for
   token_in
   token_range
   token_int
   token_float
   token_char
   token_bool
   token_and
   token_or
   token_not
   token_ParOuvrante
   token_ParFermante
   token_Deux_Points
   token_plus
   token_moins
   token_fois
   token_divise
   token_Pourcentage
   token_superieurEgal
   token_superieur
   token_inferieurEgal
   token_inferieur
   token_egal
   token_different
   token_Point
   token_indentation


State 3 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: PROGRAM

    2 PROGRAM: LISTE_IMPORT LIST_DECLARATION LISTE_INSTRUCTION

    3 LISTE_IMPORT: LISTE_IMPORT IMPORT
    4             | /* empty */

    5 IMPORT: token_import module_name
    6       | token_import module_name token_as token_idf

    7 module_name: token_numpy
    8            | token_matplotlib

    9 LIST_DECLARATION: DECLARATION_TABLEAU LIST_DECLARATION
   10                 | /* empty */

   11 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante LIST_EXPRESSION token_CrochFermante
   12                    | token_idf token_affectation token_CrochOuvrante token_CrochFermante
   13                    | token_idf token_affectation token_CrochOuvrante LIST_TABLEAU token_CrochFermante

   14 LIST_EXPRESSION: EXPRESSION
   15                | EXPRESSION token_virgule LIST_EXPRESSION

   16 LIST_TABLEAU: token_CrochOuvrante LIST_EXPRESSION token_CrochFermante token_virgule LIST_TABLEAU
   17             | token_CrochOuvrante LIST_EXPRESSION token_CrochFermante

   18 LISTE_INSTRUCTION: INSTRUCTION LISTE_INSTRUCTION
   19                  | /* empty */

   20 INSTRUCTION: AFFECTATION

   21 AFFECTATION: token_idf token_affectation EXPRESSION

   22 EXPRESSION: token_idf
   23           | token_constBool
   24           | token_constChar
   25           | token_constEntiere
   26           | token_constFlottante


Terminals, with rules where they appear

$end (0) 0
error (256)
token_import (258) 5 6
token_numpy (259) 7
token_matplotlib (260) 8
token_if (261)
token_else (262)
token_while (263)
token_for (264)
token_in (265)
token_range (266)
token_int (267)
token_float (268)
token_char (269)
token_bool (270)
token_as (271) 6
token_and (272)
token_or (273)
token_not (274)
token_constEntiere (275) 25
token_constFlottante (276) 26
token_constChar (277) 24
token_constBool (278) 23
token_idf (279) 6 11 12 13 21 22
token_ParOuvrante (280)
token_ParFermante (281)
token_CrochOuvrante (282) 11 12 13 16 17
token_CrochFermante (283) 11 12 13 16 17
token_virgule (284) 15 16
token_Deux_Points (285)
token_plus (286)
token_moins (287)
token_fois (288)
token_divise (289)
token_Pourcentage (290)
token_superieurEgal (291)
token_superieur (292)
token_inferieurEgal (293)
token_inferieur (294)
token_egal (295)
token_different (296)
token_affectation (297) 11 12 13 21
token_Point (298)
token_indentation (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
S (46)
    on left: 1, on right: 0
PROGRAM (47)
    on left: 2, on right: 1
LISTE_IMPORT (48)
    on left: 3 4, on right: 2 3
IMPORT (49)
    on left: 5 6, on right: 3
module_name (50)
    on left: 7 8, on right: 5 6
LIST_DECLARATION (51)
    on left: 9 10, on right: 2 9
DECLARATION_TABLEAU (52)
    on left: 11 12 13, on right: 9
LIST_EXPRESSION (53)
    on left: 14 15, on right: 11 15 16 17
LIST_TABLEAU (54)
    on left: 16 17, on right: 13 16
LISTE_INSTRUCTION (55)
    on left: 18 19, on right: 2 18
INSTRUCTION (56)
    on left: 20, on right: 18
AFFECTATION (57)
    on left: 21, on right: 20
EXPRESSION (58)
    on left: 22 23 24 25 26, on right: 14 15 21


state 0

    0 $accept: . S $end

    $default  reduce using rule 4 (LISTE_IMPORT)

    S             go to state 1
    PROGRAM       go to state 2
    LISTE_IMPORT  go to state 3


state 1

    0 $accept: S . $end

    $end  shift, and go to state 4


state 2

    1 S: PROGRAM .

    $default  reduce using rule 1 (S)


state 3

    2 PROGRAM: LISTE_IMPORT . LIST_DECLARATION LISTE_INSTRUCTION
    3 LISTE_IMPORT: LISTE_IMPORT . IMPORT

    token_import  shift, and go to state 5
    token_idf     shift, and go to state 6

    token_idf  [reduce using rule 10 (LIST_DECLARATION)]
    $default   reduce using rule 10 (LIST_DECLARATION)

    IMPORT               go to state 7
    LIST_DECLARATION     go to state 8
    DECLARATION_TABLEAU  go to state 9


state 4

    0 $accept: S $end .

    $default  accept


state 5

    5 IMPORT: token_import . module_name
    6       | token_import . module_name token_as token_idf

    token_numpy       shift, and go to state 10
    token_matplotlib  shift, and go to state 11

    module_name  go to state 12


state 6

   11 DECLARATION_TABLEAU: token_idf . token_affectation token_CrochOuvrante LIST_EXPRESSION token_CrochFermante
   12                    | token_idf . token_affectation token_CrochOuvrante token_CrochFermante
   13                    | token_idf . token_affectation token_CrochOuvrante LIST_TABLEAU token_CrochFermante

    token_affectation  shift, and go to state 13


state 7

    3 LISTE_IMPORT: LISTE_IMPORT IMPORT .

    $default  reduce using rule 3 (LISTE_IMPORT)


state 8

    2 PROGRAM: LISTE_IMPORT LIST_DECLARATION . LISTE_INSTRUCTION

    token_idf  shift, and go to state 14

    $default  reduce using rule 19 (LISTE_INSTRUCTION)

    LISTE_INSTRUCTION  go to state 15
    INSTRUCTION        go to state 16
    AFFECTATION        go to state 17


state 9

    9 LIST_DECLARATION: DECLARATION_TABLEAU . LIST_DECLARATION

    token_idf  shift, and go to state 6

    token_idf  [reduce using rule 10 (LIST_DECLARATION)]
    $default   reduce using rule 10 (LIST_DECLARATION)

    LIST_DECLARATION     go to state 18
    DECLARATION_TABLEAU  go to state 9


state 10

    7 module_name: token_numpy .

    $default  reduce using rule 7 (module_name)


state 11

    8 module_name: token_matplotlib .

    $default  reduce using rule 8 (module_name)


state 12

    5 IMPORT: token_import module_name .
    6       | token_import module_name . token_as token_idf

    token_as  shift, and go to state 19

    $default  reduce using rule 5 (IMPORT)


state 13

   11 DECLARATION_TABLEAU: token_idf token_affectation . token_CrochOuvrante LIST_EXPRESSION token_CrochFermante
   12                    | token_idf token_affectation . token_CrochOuvrante token_CrochFermante
   13                    | token_idf token_affectation . token_CrochOuvrante LIST_TABLEAU token_CrochFermante

    token_CrochOuvrante  shift, and go to state 20


state 14

   21 AFFECTATION: token_idf . token_affectation EXPRESSION

    token_affectation  shift, and go to state 21


state 15

    2 PROGRAM: LISTE_IMPORT LIST_DECLARATION LISTE_INSTRUCTION .

    $default  reduce using rule 2 (PROGRAM)


state 16

   18 LISTE_INSTRUCTION: INSTRUCTION . LISTE_INSTRUCTION

    token_idf  shift, and go to state 14

    $default  reduce using rule 19 (LISTE_INSTRUCTION)

    LISTE_INSTRUCTION  go to state 22
    INSTRUCTION        go to state 16
    AFFECTATION        go to state 17


state 17

   20 INSTRUCTION: AFFECTATION .

    $default  reduce using rule 20 (INSTRUCTION)


state 18

    9 LIST_DECLARATION: DECLARATION_TABLEAU LIST_DECLARATION .

    $default  reduce using rule 9 (LIST_DECLARATION)


state 19

    6 IMPORT: token_import module_name token_as . token_idf

    token_idf  shift, and go to state 23


state 20

   11 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante . LIST_EXPRESSION token_CrochFermante
   12                    | token_idf token_affectation token_CrochOuvrante . token_CrochFermante
   13                    | token_idf token_affectation token_CrochOuvrante . LIST_TABLEAU token_CrochFermante

    token_constEntiere    shift, and go to state 24
    token_constFlottante  shift, and go to state 25
    token_constChar       shift, and go to state 26
    token_constBool       shift, and go to state 27
    token_idf             shift, and go to state 28
    token_CrochOuvrante   shift, and go to state 29
    token_CrochFermante   shift, and go to state 30

    LIST_EXPRESSION  go to state 31
    LIST_TABLEAU     go to state 32
    EXPRESSION       go to state 33


state 21

   21 AFFECTATION: token_idf token_affectation . EXPRESSION

    token_constEntiere    shift, and go to state 24
    token_constFlottante  shift, and go to state 25
    token_constChar       shift, and go to state 26
    token_constBool       shift, and go to state 27
    token_idf             shift, and go to state 28

    EXPRESSION  go to state 34


state 22

   18 LISTE_INSTRUCTION: INSTRUCTION LISTE_INSTRUCTION .

    $default  reduce using rule 18 (LISTE_INSTRUCTION)


state 23

    6 IMPORT: token_import module_name token_as token_idf .

    $default  reduce using rule 6 (IMPORT)


state 24

   25 EXPRESSION: token_constEntiere .

    $default  reduce using rule 25 (EXPRESSION)


state 25

   26 EXPRESSION: token_constFlottante .

    $default  reduce using rule 26 (EXPRESSION)


state 26

   24 EXPRESSION: token_constChar .

    $default  reduce using rule 24 (EXPRESSION)


state 27

   23 EXPRESSION: token_constBool .

    $default  reduce using rule 23 (EXPRESSION)


state 28

   22 EXPRESSION: token_idf .

    $default  reduce using rule 22 (EXPRESSION)


state 29

   16 LIST_TABLEAU: token_CrochOuvrante . LIST_EXPRESSION token_CrochFermante token_virgule LIST_TABLEAU
   17             | token_CrochOuvrante . LIST_EXPRESSION token_CrochFermante

    token_constEntiere    shift, and go to state 24
    token_constFlottante  shift, and go to state 25
    token_constChar       shift, and go to state 26
    token_constBool       shift, and go to state 27
    token_idf             shift, and go to state 28

    LIST_EXPRESSION  go to state 35
    EXPRESSION       go to state 33


state 30

   12 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante token_CrochFermante .

    $default  reduce using rule 12 (DECLARATION_TABLEAU)


state 31

   11 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante LIST_EXPRESSION . token_CrochFermante

    token_CrochFermante  shift, and go to state 36


state 32

   13 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante LIST_TABLEAU . token_CrochFermante

    token_CrochFermante  shift, and go to state 37


state 33

   14 LIST_EXPRESSION: EXPRESSION .
   15                | EXPRESSION . token_virgule LIST_EXPRESSION

    token_virgule  shift, and go to state 38

    $default  reduce using rule 14 (LIST_EXPRESSION)


state 34

   21 AFFECTATION: token_idf token_affectation EXPRESSION .

    $default  reduce using rule 21 (AFFECTATION)


state 35

   16 LIST_TABLEAU: token_CrochOuvrante LIST_EXPRESSION . token_CrochFermante token_virgule LIST_TABLEAU
   17             | token_CrochOuvrante LIST_EXPRESSION . token_CrochFermante

    token_CrochFermante  shift, and go to state 39


state 36

   11 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante LIST_EXPRESSION token_CrochFermante .

    $default  reduce using rule 11 (DECLARATION_TABLEAU)


state 37

   13 DECLARATION_TABLEAU: token_idf token_affectation token_CrochOuvrante LIST_TABLEAU token_CrochFermante .

    $default  reduce using rule 13 (DECLARATION_TABLEAU)


state 38

   15 LIST_EXPRESSION: EXPRESSION token_virgule . LIST_EXPRESSION

    token_constEntiere    shift, and go to state 24
    token_constFlottante  shift, and go to state 25
    token_constChar       shift, and go to state 26
    token_constBool       shift, and go to state 27
    token_idf             shift, and go to state 28

    LIST_EXPRESSION  go to state 40
    EXPRESSION       go to state 33


state 39

   16 LIST_TABLEAU: token_CrochOuvrante LIST_EXPRESSION token_CrochFermante . token_virgule LIST_TABLEAU
   17             | token_CrochOuvrante LIST_EXPRESSION token_CrochFermante .

    token_virgule  shift, and go to state 41

    $default  reduce using rule 17 (LIST_TABLEAU)


state 40

   15 LIST_EXPRESSION: EXPRESSION token_virgule LIST_EXPRESSION .

    $default  reduce using rule 15 (LIST_EXPRESSION)


state 41

   16 LIST_TABLEAU: token_CrochOuvrante LIST_EXPRESSION token_CrochFermante token_virgule . LIST_TABLEAU

    token_CrochOuvrante  shift, and go to state 29

    LIST_TABLEAU  go to state 42


state 42

   16 LIST_TABLEAU: token_CrochOuvrante LIST_EXPRESSION token_CrochFermante token_virgule LIST_TABLEAU .

    $default  reduce using rule 16 (LIST_TABLEAU)
